--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <load ="partials/header.html" />
+<html lang="ru">
 
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <title>Image founder</title>
+</head>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+<body>
+  <form class="search-form" id="search-form">
+    <input class="search-form-input" type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+    <button class="search-form-button" type="submit">Search</button>
+  </form>
 
-    <script type="module" src="/main.js"></script>
-  </body>
+  <ul class="gallery"></ul>
+
+  <script src="./js/index.js" type="module"></script>
+</body>
+
 </html>
